fontes/uPortugol.atg
import java.io.*;
import java.util.ArrayList;

/**
 * @Author: Gabriel Rocha de Lima (grl@icomp.ufam.edu.br)
 * Exercício de Compiladores lecionado por Marco Cristo (Icomp/UFAM)
 * Icomp/UFAM - AM - Brasil
 * Sun Nov, 15, 2020
 */

class SemanticAnalyzerAndHtmlTransformer {
    ArrayList<String> inputWords;
    ArrayList<String> placeHolders;
    String line;
    String outputString;

    public SemanticAnalyzerAndHtmlTransformer() {
        this.line = "";
        this.outputString = "";
        this.inputWords = new ArrayList();
        this.placeHolders = new ArrayList();
    }

    public void debug(String s) {
        System.out.println(s);
    }
    public void debugNewInteger(String s) {
        System.out.print(s + " ");
    }

}

COMPILER UPortugol

SemanticAnalyzerAndHtmlTransformer handler = new SemanticAnalyzerAndHtmlTransformer();

CHARACTERS
    letra = 'A'..'Z' + 'a'..'z'.
    upperLetters = 'A'..'Z' .
    digit = "0123456789".

TOKENS
    palavra = letra { letra } .
    digit = digit { digit } .

IGNORE '\t' + '\r' + '\n'

PRODUCTIONS
    UPortugol   (. String declaration = ""; .)
    = VariableDeclaration<out declaration>
        {
            VariableDeclaration<out declaration>
        } 
    .



    NewInteger<out String newInt> = 
    "novo" "inteiro" ( "[" digit { digit } "]" ";"
        | "{" digit { "," digit } "}" ";"
    ) (. newInt = t.val; .)
    .

    VariableDeclaration<out String declaration> (. String var = ""; .)
    = "variavel" Variable<out var> (. handler.debug(var); .)
        {
            "," Variable<out var> (. handler.debug(var); .)
        } ":" "inteiro" ";" (. declaration = t.val; .)
    .

    Variable<out String var>
    =  palavra (. var = t.val; .)
    .

END UPortugol.
